--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h2>Identificação da unidade de saúde</h2>
-        <form class="container-form">
+        
+        <form class="form-box">
+            <h2>Identificação da unidade de saúde</h2>
             
         </form>
 
